[project]
name = "dingtalk-bot"
version = "0.1.0"
description = "DingTalk robot service with AI integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "orjson>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
